
4.87  2014-03-04
  - Fixed RFC 7159 support in Mojo::JSON.
  - Fixed RFC 7159 compliance bugs in Mojo::Transaction::WebSocket and
    Test::Mojo.
  - Fixed Unicode bugs in Test::Mojo.

4.86  2014-03-03
  - Improved Mojo::IOLoop::Delay to allow more method chaining.
  - Improved WebSocket and long poll performance.

4.85  2014-02-26
  - Added next_tick method to Mojo::IOLoop and Mojo::Reactor.
  - Added host_port and path_query methods to Mojo::URL.
  - Added is_handshake method to Mojo::Message::Request.
  - Improved Mojo::Reactor::EV responsiveness.
  - Fixed IDNA support for CONNECT requests.
  - Fixed "0" value bug in Mojo::Message::Request.

4.84  2014-02-22
  - Added remaining attribute to Mojo::IOLoop::Delay.
  - Added data and pass methods to Mojo::IOLoop::Delay.
  - Improved Mojo::Exception context detection to better line up with user
    expectations.

4.83  2014-02-19
  - Improved Mojo::JSON to handle encoding errors more gracefully.
  - Fixed line numbers in Mojo::JSON error messages.

4.82  2014-02-19
  - Added decode_json and encode_json functions to Mojo::JSON.
  - Added data attribute to Mojo::JSON::Pointer.
  - Fixed bug in "user_agent_online.t".
  - Fixed small decoding bug in Mojo::JSON.

4.81  2014-02-15
  - Added direct array access for child nodes to Mojo::DOM.
  - Improved Mojolicious::Routes::Pattern to normalize more route variations.
  - Improved routes command to show which routes are using certain features
    with flags.

4.80  2014-02-13
  - Merged Mojo::DOM::Node into Mojo::DOM.
  - Added next_sibling and previous_sibling methods to Mojo::DOM.
  - Added last method to Mojo::Collection.
  - Improved many methods in Mojo::DOM to work with all node types.
  - Improved Mojo::DOM::HTML to handle slashes between attributes more
    gracefully.
  - Fixed list parsing bug in Mojo::DOM::HTML.

4.79  2014-02-11
  - Improved not found page to show request information and the exact path
    used for route matching.

4.78  2014-02-08