@@ -1,5 +1,6 @@
 
 4.87  2014-03-04
+  - Improved Mojo::ByteStream to allow more method chaining.
   - Fixed RFC 7159 support in Mojo::JSON.
   - Fixed RFC 7159 compliance bugs in Mojo::Transaction::WebSocket and
     Test::Mojo.
